Worked on Date Picker Modes on Selection of All Day Event

--- a/CalendarDemo/Base.lproj/Main.storyboard
+++ b/CalendarDemo/Base.lproj/Main.storyboard
@@ -352,9 +352,12 @@
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lUW-eo-DYP">
+                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="lUW-eo-DYP">
                                                 <rect key="frame" x="211" y="15" width="51" height="31"/>
                                                 <color key="onTintColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <connections>
+                                                    <action selector="addEventAllDayAction:" destination="BYZ-38-t0r" eventType="valueChanged" id="N2m-xB-frX"/>
+                                                </connections>
                                             </switch>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="COO-Mw-gYO">
                                                 <rect key="frame" x="79" y="49.5" width="181" height="30"/>
